Update index.html to enhance layout and styling for better responsiveness and readability

--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
     }
   </style>
 </head>
-<body class="bg-gray-900 text-gray-100 min-h-screen flex flex-col items-center justify-center">
-  <div class="container mx-auto px-4 text-center">
-    <h1 class="text-4xl font-bold mb-6 font-courier">GHOST BPA</h1>
-    <div class="border-t border-gray-700 w-24 mx-auto my-8"></div>
-    <p class="text-xl mb-8 font-courier">UNDER CONSTRUCTION</p>
-    <p class="text-gray-400 max-w-md mx-auto font-courier">Our website is currently being built. Please check back soon for updates.</p>
+<body class="bg-gray-900 text-gray-100 min-h-screen flex flex-col items-center justify-center p-4">
+  <div class="w-full max-w-md mx-auto px-4 text-center">
+    <h1 class="text-3xl md:text-4xl font-bold mb-4 md:mb-6 font-courier">GHOST BPA</h1>
+    <div class="border-t border-gray-700 w-16 md:w-24 mx-auto my-6 md:my-8"></div>
+    <p class="text-lg md:text-xl mb-6 md:mb-8 font-courier">UNDER CONSTRUCTION</p>
+    <p class="text-gray-400 text-sm md:text-base max-w-md mx-auto font-courier">Our website is currently being built. Please check back soon for updates.</p>
   </div>
 </body>
 </html> 
