Updated meta tags and moved assets to proper directory structure

--- a/index.html
+++ b/index.html
@@ -3,28 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Ghost Business Process Automation - Streamline Your Business Operations</title>
+  <title>GhostBPA – Silent Systems</title>
   
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+  <link rel="icon" type="image/svg+xml" href="/assets/images/favicon.svg">
   
   <!-- Primary Meta Tags -->
-  <meta name="title" content="Ghost Business Process Automation - Streamline Your Business Operations">
-  <meta name="description" content="Expert business process automation services to help streamline your operations, reduce costs, and increase efficiency using modern tools and technologies.">
+  <meta name="title" content="GhostBPA – Silent Systems">
+  <meta name="description" content="Building Silent Systems for SMB's">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://ghostbpa.com/">
-  <meta property="og:title" content="Ghost Business Process Automation - Streamline Your Business Operations">
-  <meta property="og:description" content="Expert business process automation services to help streamline your operations, reduce costs, and increase efficiency using modern tools and technologies.">
-  <meta property="og:image" content="https://ghostbpa.com/social-preview.svg">
+  <meta property="og:title" content="GhostBPA – Silent Systems">
+  <meta property="og:description" content="Building Silent Systems for SMB's">
+  <meta property="og:image" content="https://ghostbpa.com/assets/images/social-preview.jpg">
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
   
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://ghostbpa.com/">
-  <meta property="twitter:title" content="Ghost Business Process Automation - Streamline Your Business Operations">
-  <meta property="twitter:description" content="Expert business process automation services to help streamline your operations, reduce costs, and increase efficiency using modern tools and technologies.">
-  <meta property="twitter:image" content="https://ghostbpa.com/social-preview.svg">
+  <meta property="twitter:title" content="GhostBPA – Silent Systems">
+  <meta property="twitter:description" content="Building Silent Systems for SMB's">
+  <meta property="twitter:image" content="https://ghostbpa.com/assets/images/social-preview.jpg">
   
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
