Updated social preview image path and type to match actual file

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -17,8 +17,8 @@
     <meta property="og:url" content="https://ghostbpa.com/privacy-policy">
     <meta property="og:title" content="Privacy Policy | GhostBPA – Silent Systems">
     <meta property="og:description" content="Privacy policy for GhostBPA – Building Silent Systems for SMB's">
-    <meta property="og:image" content="https://ghostbpa.com/assets/images/social-preview.jpg">
-    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image" content="https://ghostbpa.com/assets/images/GhostBPA-social-preview.png">
+    <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     
@@ -27,7 +27,7 @@
     <meta property="twitter:url" content="https://ghostbpa.com/privacy-policy">
     <meta property="twitter:title" content="Privacy Policy | GhostBPA – Silent Systems">
     <meta property="twitter:description" content="Privacy policy for GhostBPA – Building Silent Systems for SMB's">
-    <meta property="twitter:image" content="https://ghostbpa.com/assets/images/social-preview.jpg">
+    <meta property="twitter:image" content="https://ghostbpa.com/assets/images/GhostBPA-social-preview.png">
     
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
