--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
   
   <!-- Primary Meta Tags -->
   <meta name="title" content="GhostBPA – Silent Systems">
-  <meta name="description" content="Building Silent Systems for SMB's">
+  <meta name="description" content="Business process automation for SMBs">
   
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://ghostbpa.com/">
   <meta property="og:title" content="GhostBPA – Silent Systems">
-  <meta property="og:description" content="Building Silent Systems for SMB's">
+  <meta property="og:description" content="Business process automation for SMBs">
   <meta property="og:image" content="https://ghostbpa.com/assets/images/GhostBPA-social-preview.png">
   <meta property="og:image:type" content="image/png">
   <meta property="og:image:width" content="1200">
@@ -26,7 +26,7 @@
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://ghostbpa.com/">
   <meta property="twitter:title" content="GhostBPA – Silent Systems">
-  <meta property="twitter:description" content="Building Silent Systems for SMB's">
+  <meta property="twitter:description" content="Business process automation for SMBs">
   <meta property="twitter:image" content="https://ghostbpa.com/assets/images/GhostBPA-social-preview.png">
   
   <script src="https://cdn.tailwindcss.com"></script>
