--- a/terms.html
+++ b/terms.html
@@ -2,7 +2,7 @@
 <html lang="en" class="scroll-smooth">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Terms of Service | GhostBPA – Silent Systems</title>
     
     <!-- Favicon -->
@@ -44,8 +44,15 @@
     </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
+        html, body {
+            overflow-x: hidden;
+            width: 100%;
+            max-width: 100vw;
+            position: relative;
+        }
         body {
             font-family: 'Inter', sans-serif;
+            overflow-x: hidden;
         }
         .logo-text {
             font-size: 24px;
