--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 We partner with SMBs to replace manual bottlenecks with custom-built tools that work invisibly in the background. Your team keeps their brainpower. We build the workflows.
               </p>
             </div>
-            <div class="grid grid-cols-2 gap-8 h-full">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
               <div class="group relative h-full">
                 <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
                 <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-full flex flex-col justify-center">
