Restore Development and Tools sections in Tech Stack

--- a/index.html
+++ b/index.html
@@ -440,6 +440,116 @@
               </div>
             </div>
           </div>
+
+          <!-- Development -->
+          <div class="mb-16">
+            <h3 class="text-2xl font-light mb-8 text-white/90">Development</h3>
+            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6">
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Cloudflare Workers</h3>
+                </div>
+              </div>
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">JavaScript</h3>
+                </div>
+              </div>
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Python</h3>
+                </div>
+              </div>
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Railway</h3>
+                </div>
+              </div>
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">VS Code</h3>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- Tools -->
+          <div>
+            <h3 class="text-2xl font-light mb-8 text-white/90">Tools</h3>
+            <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-6">
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Airtable</h3>
+                </div>
+              </div>
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Asana</h3>
+                </div>
+              </div>
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Cal.com</h3>
+                </div>
+              </div>
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Calendly</h3>
+                </div>
+              </div>
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Google Docs</h3>
+                </div>
+              </div>
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Google Sheets</h3>
+                </div>
+              </div>
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Make.com</h3>
+                </div>
+              </div>
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Notion</h3>
+                </div>
+              </div>
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">QuickBooks Online</h3>
+                </div>
+              </div>
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Zapier</h3>
+                </div>
+              </div>
+              <div class="group relative">
+                <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
+                <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
+                  <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Zendesk</h3>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
