--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
-      theme: {
-        extend: {
-          colors: {
+            theme: {
+              extend: {
+                colors: {
             'ghost-purple': '#2E3BFF',
-            'ghost-dark': '#111827',
-          }
+                  'ghost-dark': '#111827',
+            }
         }
       }
     }
@@ -199,7 +199,7 @@
 
   <main class="flex-1 overflow-x-hidden">
     <div class="w-full overflow-x-hidden">
-      <!-- Hero Section -->
+  <!-- Hero Section -->
       <section class="min-h-screen bg-black relative flex flex-col">
         <!-- Main content with perfect centering -->
         <div class="flex-1 flex items-center justify-center relative z-10 mt-16 mb-[200px]">
@@ -207,7 +207,7 @@
             <h1 class="text-6xl md:text-8xl font-extralight mb-4">
               <span>
                 <span class="ghost-text text-white"><span>G</span><span>host</span></span><span class="bpa-text text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] ml-1">BPA</span>
-              </span>
+            </span>
             </h1>
             <p class="text-2xl md:text-3xl text-white/40 font-extralight tracking-wide">
               Business Process Automation
@@ -384,11 +384,11 @@
                   <h3 class="text-5xl font-light mb-4 text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">1,000+</h3>
                   <p class="text-white/70">hours reclaimed from manual tasks</p>
                 </div>
-              </div>
-            </div>
           </div>
         </div>
-      </section>
+      </div>
+    </div>
+  </section>
 
       <!-- Tech Stack Section -->
       <section id="tech-stack" class="py-24 bg-black/50">
@@ -436,10 +436,10 @@
                 <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
                 <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
                   <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Zoho CRM</h3>
-                </div>
-              </div>
-            </div>
-          </div>
+        </div>
+        </div>
+      </div>
+    </div>
 
           <!-- Development -->
           <div class="mb-16">
@@ -476,7 +476,7 @@
                 </div>
               </div>
             </div>
-          </div>
+      </div>
 
           <!-- Tools -->
           <div>
@@ -560,9 +560,25 @@
             <h2 class="text-4xl font-light mb-8">Let's move what matters to you</h2>
             <p class="text-white/70 text-lg mb-12">Ready to start your journey towards automated excellence? Get in touch with our team.</p>
             <form action="https://formspree.io/f/xgvadbld" method="POST" class="space-y-6" id="contactForm">
+              <!-- Honeypot field -->
+              <div class="hidden">
+                <input type="text" name="_gotcha" tabindex="-1" autocomplete="off">
+              </div>
               <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <input type="text" name="name" placeholder="Name" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
-                <input type="email" name="email" placeholder="Email" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
+                <div class="relative">
+                  <input type="text" name="name" placeholder="Name" required 
+                    pattern="^[a-zA-Z\s]{2,}$"
+                    title="Please enter at least 2 letters, no numbers or special characters"
+                    class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
+                  <span class="validation-message text-sm text-red-400 hidden"></span>
+                </div>
+                <div class="relative">
+                  <input type="email" name="email" placeholder="Email" required 
+                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                    title="Please enter a valid email address"
+                    class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
+                  <span class="validation-message text-sm text-red-400 hidden"></span>
+                </div>
               </div>
               <div class="relative">
                 <select name="subject" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30 appearance-none">
@@ -576,11 +592,17 @@
                   <svg class="h-5 w-5 text-white/50" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
                   </svg>
-                </div>
-              </div>
-              <textarea name="message" rows="4" placeholder="Message" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30"></textarea>
+        </div>
+        </div>
               <div class="relative">
-                <button type="submit" class="w-full md:w-auto px-8 py-3 bg-white text-black font-medium rounded-lg hover:bg-white/90 transition-colors duration-200" id="submitButton">
+                <textarea name="message" rows="4" placeholder="Message" required 
+                  minlength="10"
+                  title="Please enter at least 10 characters"
+                  class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30"></textarea>
+                <span class="validation-message text-sm text-red-400 hidden"></span>
+        </div>
+              <div class="relative">
+                <button type="submit" class="w-full md:w-auto px-8 py-3 bg-white text-black font-medium rounded-lg hover:bg-white/90 transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed" id="submitButton">
                   <span class="submit-text">Send Message</span>
                   <span class="loading-spinner hidden">
                     <svg class="animate-spin h-5 w-5 text-black" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
@@ -588,14 +610,17 @@
                       <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
                     </svg>
                   </span>
-                </button>
+        </button>
               </div>
               <div id="successMessage" class="hidden mt-4 p-4 bg-green-500/10 border border-green-500/20 rounded-lg text-green-400">
                 Thank you for your message! We'll get back to you soon.
               </div>
-            </form>
-          </div>
-        </div>
+              <div id="errorMessage" class="hidden mt-4 p-4 bg-red-500/10 border border-red-500/20 rounded-lg text-red-400">
+                There was a problem submitting the form. Please try again.
+              </div>
+      </form>
+    </div>
+  </div>
       </section>
     </div>
   </main>
@@ -618,16 +643,58 @@
       }
     });
 
-    // Form submission handling
+    // Form submission handling with improved validation
     const contactForm = document.getElementById('contactForm');
     const submitButton = document.getElementById('submitButton');
     const submitText = submitButton.querySelector('.submit-text');
     const loadingSpinner = submitButton.querySelector('.loading-spinner');
     const successMessage = document.getElementById('successMessage');
+    const errorMessage = document.getElementById('errorMessage');
+    const validationMessages = document.querySelectorAll('.validation-message');
+
+    // Show validation messages on input
+    contactForm.querySelectorAll('input, textarea').forEach(input => {
+      input.addEventListener('invalid', function(e) {
+        e.preventDefault();
+        const message = this.parentNode.querySelector('.validation-message');
+        if (message) {
+          message.textContent = this.title;
+          message.classList.remove('hidden');
+        }
+      });
+
+      input.addEventListener('input', function() {
+        const message = this.parentNode.querySelector('.validation-message');
+        if (message) {
+          message.classList.add('hidden');
+        }
+      });
+    });
 
     contactForm.addEventListener('submit', async function(e) {
       e.preventDefault();
       
+      // Reset messages
+      successMessage.classList.add('hidden');
+      errorMessage.classList.add('hidden');
+      validationMessages.forEach(msg => msg.classList.add('hidden'));
+
+      // Client-side validation
+      const inputs = contactForm.querySelectorAll('input, textarea, select');
+      let isValid = true;
+      inputs.forEach(input => {
+        if (!input.checkValidity()) {
+          isValid = false;
+          const message = input.parentNode.querySelector('.validation-message');
+          if (message) {
+            message.textContent = input.title;
+            message.classList.remove('hidden');
+          }
+        }
+      });
+
+      if (!isValid) return;
+
       // Show loading state
       submitText.classList.add('hidden');
       loadingSpinner.classList.remove('hidden');
@@ -636,11 +703,11 @@
       try {
         const formData = new FormData(contactForm);
         const response = await fetch(contactForm.action, {
-          method: 'POST',
-          body: formData,
-          headers: {
-            'Accept': 'application/json'
-          }
+        method: 'POST',
+        body: formData,
+        headers: {
+          'Accept': 'application/json'
+        }
         });
 
         if (response.ok) {
@@ -657,7 +724,7 @@
         }
       } catch (error) {
         console.error('Error:', error);
-        alert('There was a problem submitting the form. Please try again.');
+        errorMessage.classList.remove('hidden');
       } finally {
         // Reset button state
         submitText.classList.remove('hidden');
