--- a/index.html
+++ b/index.html
@@ -595,10 +595,10 @@
               </div>
               <div class="relative">
                 <textarea name="message" rows="4" placeholder="Message" required 
-                  minlength="5"
-                  title="Please enter at least 5 characters"
+                  minlength="3"
+                  title="Please enter at least 3 characters"
                   class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30"></textarea>
-                <span class="validation-message text-sm text-red-400 hidden"></span>
+                <span class="validation-message text-sm text-red-400 hidden">Please enter at least 3 characters</span>
               </div>
               <div class="relative">
                 <button type="submit" class="w-full md:w-auto px-8 py-3 bg-white text-black font-medium rounded-lg hover:bg-white/90 transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed" id="submitButton">
@@ -667,6 +667,10 @@
         if (message) {
           message.classList.add('hidden');
         }
+        // Enable submit button if all required fields are filled
+        const allValid = Array.from(contactForm.querySelectorAll('input, textarea, select'))
+          .every(input => input.checkValidity());
+        submitButton.disabled = !allValid;
       });
     });
 
