--- a/index.html
+++ b/index.html
@@ -560,24 +560,9 @@
             <h2 class="text-4xl font-light mb-8">Let's move what matters to you</h2>
             <p class="text-white/70 text-lg mb-12">Ready to start your journey towards automated excellence? Get in touch with our team.</p>
             <form action="https://formspree.io/f/xgvadbld" method="POST" class="space-y-6" id="contactForm">
-              <!-- Honeypot field -->
-              <div class="hidden">
-                <input type="text" name="_gotcha" tabindex="-1" autocomplete="off">
-              </div>
               <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                <div class="relative">
-                  <input type="text" name="name" placeholder="Name" required 
-                    minlength="2"
-                    title="Please enter at least 2 characters"
-                    class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
-                  <span class="validation-message text-sm text-red-400 hidden"></span>
-                </div>
-                <div class="relative">
-                  <input type="email" name="email" placeholder="Email" required 
-                    title="Please enter a valid email address"
-                    class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
-                  <span class="validation-message text-sm text-red-400 hidden"></span>
-                </div>
+                <input type="text" name="name" placeholder="Name" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
+                <input type="email" name="email" placeholder="Email" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
               </div>
               <div class="relative">
                 <select name="subject" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30 appearance-none">
@@ -593,24 +578,10 @@
                   </svg>
                 </div>
               </div>
-              <div class="relative">
-                <textarea name="message" rows="4" placeholder="Message" required 
-                  minlength="3"
-                  title="Please enter at least 3 characters"
-                  class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30"></textarea>
-                <span class="validation-message text-sm text-red-400 hidden">Please enter at least 3 characters</span>
-              </div>
-              <div class="relative">
-                <button type="submit" class="w-full md:w-auto px-8 py-3 bg-white text-black font-medium rounded-lg hover:bg-white/90 transition-colors duration-200 disabled:opacity-50 disabled:cursor-not-allowed" id="submitButton">
-                  <span class="submit-text">Send Message</span>
-                  <span class="loading-spinner hidden">
-                    <svg class="animate-spin h-5 w-5 text-black" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                      <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                      <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
-                    </svg>
-                  </span>
-                </button>
-              </div>
+              <textarea name="message" rows="4" placeholder="Message" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30"></textarea>
+              <button type="submit" class="w-full md:w-auto px-8 py-3 bg-white text-black font-medium rounded-lg hover:bg-white/90 transition-colors duration-200" id="submitButton">
+                Send Message
+              </button>
               <div id="successMessage" class="hidden mt-4 p-4 bg-green-500/10 border border-green-500/20 rounded-lg text-green-400">
                 Thank you for your message! We'll get back to you soon.
               </div>
@@ -642,37 +613,11 @@
       }
     });
 
-    // Form submission handling with improved validation
+    // Form submission handling
     const contactForm = document.getElementById('contactForm');
     const submitButton = document.getElementById('submitButton');
-    const submitText = submitButton.querySelector('.submit-text');
-    const loadingSpinner = submitButton.querySelector('.loading-spinner');
     const successMessage = document.getElementById('successMessage');
     const errorMessage = document.getElementById('errorMessage');
-    const validationMessages = document.querySelectorAll('.validation-message');
-
-    // Show validation messages on input
-    contactForm.querySelectorAll('input, textarea').forEach(input => {
-      input.addEventListener('invalid', function(e) {
-        e.preventDefault();
-        const message = this.parentNode.querySelector('.validation-message');
-        if (message) {
-          message.textContent = this.title;
-          message.classList.remove('hidden');
-        }
-      });
-
-      input.addEventListener('input', function() {
-        const message = this.parentNode.querySelector('.validation-message');
-        if (message) {
-          message.classList.add('hidden');
-        }
-        // Enable submit button if all required fields are filled
-        const allValid = Array.from(contactForm.querySelectorAll('input, textarea, select'))
-          .every(input => input.checkValidity());
-        submitButton.disabled = !allValid;
-      });
-    });
 
     contactForm.addEventListener('submit', async function(e) {
       e.preventDefault();
@@ -680,28 +625,6 @@
       // Reset messages
       successMessage.classList.add('hidden');
       errorMessage.classList.add('hidden');
-      validationMessages.forEach(msg => msg.classList.add('hidden'));
-
-      // Client-side validation
-      const inputs = contactForm.querySelectorAll('input, textarea, select');
-      let isValid = true;
-      inputs.forEach(input => {
-        if (!input.checkValidity()) {
-          isValid = false;
-          const message = input.parentNode.querySelector('.validation-message');
-          if (message) {
-            message.textContent = input.title;
-            message.classList.remove('hidden');
-          }
-        }
-      });
-
-      if (!isValid) return;
-
-      // Show loading state
-      submitText.classList.add('hidden');
-      loadingSpinner.classList.remove('hidden');
-      submitButton.disabled = true;
 
       try {
         const formData = new FormData(contactForm);
@@ -713,9 +636,7 @@
           }
         });
 
-        const data = await response.json();
-        
-        if (response.ok && data.ok) {
+        if (response.ok) {
           // Show success message
           successMessage.classList.remove('hidden');
           contactForm.reset();
@@ -725,18 +646,11 @@
             successMessage.classList.add('hidden');
           }, 5000);
         } else {
-          console.error('Form submission failed:', data);
-          throw new Error(data.error || 'Form submission failed');
+          throw new Error('Form submission failed');
         }
       } catch (error) {
         console.error('Error:', error);
-        errorMessage.textContent = error.message || 'There was a problem submitting the form. Please try again.';
         errorMessage.classList.remove('hidden');
-      } finally {
-        // Reset button state
-        submitText.classList.remove('hidden');
-        loadingSpinner.classList.add('hidden');
-        submitButton.disabled = false;
       }
     });
   </script>
