--- a/index.html
+++ b/index.html
@@ -436,10 +436,10 @@
                 <div class="absolute -inset-0.5 bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] rounded-2xl blur opacity-0 group-hover:opacity-50 transition duration-300"></div>
                 <div class="relative bg-gradient-to-b from-[#1a1f2d]/90 to-[#1a1f2d]/40 backdrop-blur-sm border border-white/10 p-8 rounded-2xl transition-all duration-300 h-[108px] flex flex-col items-center justify-center">
                   <h3 class="text-xl font-light text-center text-transparent bg-clip-text bg-gradient-to-r from-[#2E3BFF] to-[#00E5FF] transition-colors duration-300 group-hover:text-white group-hover:bg-none">Zoho CRM</h3>
-        </div>
-        </div>
-      </div>
-    </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
           <!-- Development -->
           <div class="mb-16">
@@ -476,7 +476,7 @@
                 </div>
               </div>
             </div>
-      </div>
+          </div>
 
           <!-- Tools -->
           <div>
@@ -560,6 +560,7 @@
             <h2 class="text-4xl font-light mb-8">Let's move what matters to you</h2>
             <p class="text-white/70 text-lg mb-12">Ready to start your journey towards automated excellence? Get in touch with our team.</p>
             <form action="https://formspree.io/f/xgvadbld" method="POST" class="space-y-6" id="contactForm">
+              <input type="hidden" name="_formspree_key" value="xgvadbld">
               <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <input type="text" name="name" placeholder="Name" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
                 <input type="email" name="email" placeholder="Email" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
