--- a/index.html
+++ b/index.html
@@ -560,8 +560,6 @@
             <h2 class="text-4xl font-light mb-8">Let's move what matters to you</h2>
             <p class="text-white/70 text-lg mb-12">Ready to start your journey towards automated excellence? Get in touch with our team.</p>
             <form action="https://formspree.io/f/xgvadbld" method="POST" class="space-y-6" id="contactForm">
-              <input type="hidden" name="_next" value="https://ghostbpa.com/#contact">
-              <input type="hidden" name="_subject" value="New Contact Form Submission">
               <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <input type="text" name="name" placeholder="Name" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
                 <input type="email" name="email" placeholder="Email" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
@@ -582,13 +580,7 @@
               </div>
               <textarea name="message" rows="4" placeholder="Message" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30"></textarea>
               <button type="submit" class="w-full md:w-auto px-8 py-3 bg-white text-black font-medium rounded-lg hover:bg-white/90 transition-colors duration-200" id="submitButton">
-                <span id="submitText">Send Message</span>
-                <span id="submitSpinner" class="hidden">
-                  <svg class="animate-spin h-5 w-5 text-black" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
-                    <circle class="opacity-25" cx="12" cy="12" r="10" stroke="currentColor" stroke-width="4"></circle>
-                    <path class="opacity-75" fill="currentColor" d="M4 12a8 8 0 018-8V0C5.373 0 0 5.373 0 12h4zm2 5.291A7.962 7.962 0 014 12H0c0 3.042 1.135 5.824 3 7.938l3-2.647z"></path>
-                  </svg>
-                </span>
+                Send Message
               </button>
               <div id="successMessage" class="hidden mt-4 p-4 bg-green-500/10 border border-green-500/20 rounded-lg text-green-400">
                 Thank you for your message! We'll get back to you soon.
@@ -635,8 +627,6 @@
     // Form submission handling
     const contactForm = document.getElementById('contactForm');
     const submitButton = document.getElementById('submitButton');
-    const submitText = document.getElementById('submitText');
-    const submitSpinner = document.getElementById('submitSpinner');
     const successMessage = document.getElementById('successMessage');
     const errorMessage = document.getElementById('errorMessage');
 
@@ -647,11 +637,6 @@
       successMessage.classList.add('hidden');
       errorMessage.classList.add('hidden');
       
-      // Show loading state
-      submitText.classList.add('hidden');
-      submitSpinner.classList.remove('hidden');
-      submitButton.disabled = true;
-
       try {
         const formData = new FormData(contactForm);
         const response = await fetch(contactForm.action, {
@@ -672,18 +657,11 @@
             successMessage.classList.add('hidden');
           }, 5000);
         } else {
-          const data = await response.json();
-          throw new Error(data.error || 'Form submission failed');
+          throw new Error('Form submission failed');
         }
       } catch (error) {
         console.error('Error:', error);
-        errorMessage.textContent = error.message || 'There was a problem submitting the form. Please try again.';
         errorMessage.classList.remove('hidden');
-      } finally {
-        // Reset loading state
-        submitText.classList.remove('hidden');
-        submitSpinner.classList.add('hidden');
-        submitButton.disabled = false;
       }
     });
   </script>
