--- a/index.html
+++ b/index.html
@@ -560,6 +560,7 @@
             <h2 class="text-4xl font-light mb-8">Let's move what matters to you</h2>
             <p class="text-white/70 text-lg mb-12">Ready to start your journey towards automated excellence? Get in touch with our team.</p>
             <form action="https://formspree.io/f/xgvadbld" method="POST" class="space-y-6" id="contactForm">
+              <input type="hidden" name="_captcha" value="false">
               <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <input type="text" name="name" placeholder="Name" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
                 <input type="email" name="email" placeholder="Email" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
@@ -657,10 +658,12 @@
             successMessage.classList.add('hidden');
           }, 5000);
         } else {
-          throw new Error('Form submission failed');
+          const data = await response.json();
+          throw new Error(data.error || 'Form submission failed');
         }
       } catch (error) {
         console.error('Error:', error);
+        errorMessage.textContent = error.message || 'There was a problem submitting the form. Please try again.';
         errorMessage.classList.remove('hidden');
       }
     });
