--- a/index.html
+++ b/index.html
@@ -561,6 +561,11 @@
             <p class="text-white/70 text-lg mb-12">Ready to start your journey towards automated excellence? Get in touch with our team.</p>
             <form action="https://formspree.io/f/xgvadbld" method="POST" class="space-y-6" id="contactForm">
               <input type="hidden" name="_captcha" value="false">
+              <!-- Anti-bot measures -->
+              <div class="hidden">
+                <input type="text" name="website" tabindex="-1" autocomplete="off">
+                <input type="text" name="timestamp" value="" id="formTimestamp">
+              </div>
               <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                 <input type="text" name="name" placeholder="Name" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
                 <input type="email" name="email" placeholder="Email" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30">
@@ -630,6 +635,10 @@
     const submitButton = document.getElementById('submitButton');
     const successMessage = document.getElementById('successMessage');
     const errorMessage = document.getElementById('errorMessage');
+    const formTimestamp = document.getElementById('formTimestamp');
+
+    // Set timestamp when page loads
+    formTimestamp.value = Date.now();
 
     contactForm.addEventListener('submit', async function(e) {
       e.preventDefault();
@@ -637,6 +646,14 @@
       // Reset messages
       successMessage.classList.add('hidden');
       errorMessage.classList.add('hidden');
+      
+      // Check if form was filled too quickly (less than 3 seconds)
+      const formFillTime = Date.now() - parseInt(formTimestamp.value);
+      if (formFillTime < 3000) {
+        errorMessage.textContent = 'Please take your time to fill out the form.';
+        errorMessage.classList.remove('hidden');
+        return;
+      }
       
       try {
         const formData = new FormData(contactForm);
