--- a/index.html
+++ b/index.html
@@ -142,7 +142,26 @@
       right: 0;
       background: linear-gradient(to left, rgb(0 0 0 / 0.5), transparent);
     }
+
+    /* Custom reCAPTCHA styling */
+    .g-recaptcha {
+      display: flex;
+      justify-content: center;
+      margin: 1rem 0;
+    }
+
+    .g-recaptcha > div {
+      background: rgba(255, 255, 255, 0.05) !important;
+      border: 1px solid rgba(255, 255, 255, 0.1) !important;
+      border-radius: 0.5rem !important;
+      overflow: hidden !important;
+    }
+
+    .g-recaptcha iframe {
+      filter: invert(1) hue-rotate(180deg) !important;
+    }
   </style>
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body class="bg-black text-white">
   <!-- Header/Navigation -->
@@ -561,6 +580,7 @@
             <p class="text-white/70 text-lg mb-12">Ready to start your journey towards automated excellence? Get in touch with our team.</p>
             <form action="https://formspree.io/f/xgvadbld" method="POST" class="space-y-6" id="contactForm">
               <input type="hidden" name="_captcha" value="false">
+              <input type="hidden" name="_recaptcha" value="6LdsgRgrAAAAAKRZXf4Qr301-h7YIMplwibZloPZ">
               <!-- Anti-bot measures -->
               <div class="hidden">
                 <input type="text" name="website" tabindex="-1" autocomplete="off">
@@ -585,6 +605,7 @@
                 </div>
               </div>
               <textarea name="message" rows="4" placeholder="Message" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30"></textarea>
+              <div class="g-recaptcha" data-sitekey="6LdsgRgrAAAAAKRZXf4Qr301-h7YIMplwibZloPZ" data-theme="dark"></div>
               <button type="submit" class="w-full md:w-auto px-8 py-3 bg-white text-black font-medium rounded-lg hover:bg-white/90 transition-colors duration-200" id="submitButton">
                 Send Message
               </button>
@@ -654,6 +675,14 @@
         errorMessage.classList.remove('hidden');
         return;
       }
+
+      // Check if reCAPTCHA is completed
+      const recaptchaResponse = grecaptcha.getResponse();
+      if (!recaptchaResponse) {
+        errorMessage.textContent = 'Please complete the reCAPTCHA verification.';
+        errorMessage.classList.remove('hidden');
+        return;
+      }
       
       try {
         const formData = new FormData(contactForm);
@@ -669,6 +698,7 @@
           // Show success message
           successMessage.classList.remove('hidden');
           contactForm.reset();
+          grecaptcha.reset(); // Reset reCAPTCHA
           
           // Hide success message after 5 seconds
           setTimeout(() => {
@@ -682,6 +712,7 @@
         console.error('Error:', error);
         errorMessage.textContent = error.message || 'There was a problem submitting the form. Please try again.';
         errorMessage.classList.remove('hidden');
+        grecaptcha.reset(); // Reset reCAPTCHA on error
       }
     });
   </script>
