--- a/index.html
+++ b/index.html
@@ -148,9 +148,6 @@
       display: flex;
       justify-content: center;
       margin: 1rem 0;
-      position: relative;
-      left: 50%;
-      transform: translateX(-50%);
     }
 
     .g-recaptcha > div {
@@ -159,7 +156,7 @@
       background: rgba(255, 255, 255, 0.05) !important;
       border: 1px solid rgba(255, 255, 255, 0.1) !important;
       border-radius: 0.5rem !important;
-      overflow: hidden !important;
+      overflow: visible !important;
     }
 
     .g-recaptcha iframe {
@@ -557,7 +554,7 @@
                 </div>
               </div>
               <textarea name="message" rows="4" placeholder="Message" required class="w-full px-4 py-3 bg-white/5 border border-white/10 rounded-lg text-white placeholder-white/30 focus:outline-none focus:border-white/30"></textarea>
-              <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY" data-theme="dark"></div>
+              <div class="g-recaptcha" data-sitekey="6LdsgRgrAAAAAKRZXf4Qr301-h7YIMplwibZloPZ" data-theme="dark" data-size="normal"></div>
               <button type="submit" class="w-full md:w-auto px-8 py-3 bg-white text-black font-medium rounded-lg hover:bg-white/90 transition-colors duration-200" id="submitButton">
                 Send Message
               </button>
