Update reCAPTCHA styling for consistent dark theme

--- a/index.html
+++ b/index.html
@@ -153,14 +153,13 @@
     .g-recaptcha > div {
       width: 100% !important;
       max-width: 400px !important;
-      background: rgba(255, 255, 255, 0.05) !important;
+      background: rgba(26, 31, 45, 0.9) !important;
       border: 1px solid rgba(255, 255, 255, 0.1) !important;
       border-radius: 0.5rem !important;
-      overflow: visible !important;
+      overflow: hidden !important;
     }
 
     .g-recaptcha iframe {
-      filter: invert(1) hue-rotate(180deg) !important;
       background: transparent !important;
       width: 100% !important;
     }
@@ -168,7 +167,7 @@
     /* Style the reCAPTCHA checkbox */
     .g-recaptcha .recaptcha-checkbox {
       border: 1px solid rgba(255, 255, 255, 0.1) !important;
-      background: rgba(255, 255, 255, 0.05) !important;
+      background: rgba(26, 31, 45, 0.9) !important;
       border-radius: 0.25rem !important;
     }
 
@@ -184,7 +183,7 @@
     /* Add hover effect */
     .g-recaptcha > div:hover {
       border-color: rgba(255, 255, 255, 0.2) !important;
-      background: rgba(255, 255, 255, 0.08) !important;
+      background: rgba(26, 31, 45, 0.95) !important;
       transition: all 0.3s ease !important;
     }
   </style>
