fix: adjust badge section spacing on mobile

--- a/index.html
+++ b/index.html
@@ -458,8 +458,8 @@
         </div>
 
         <!-- Badge Slider Section -->
-        <div class="relative z-10 mb-12">
-          <h2 class="text-lg md:text-xl text-white/20 font-light text-center mb-6 text-shadow-hero whitespace-nowrap">Certified in business automation and integration</h2>
+        <div class="relative z-10 mt-24 md:mt-16 mb-12">
+          <h2 class="text-lg md:text-xl text-white/20 font-light text-center mb-2 text-shadow-hero whitespace-nowrap">Certified in business automation and integration</h2>
           <div class="w-full bg-transparent overflow-hidden">
             <div class="badge-slider-container">
               <div class="badge-track">
